tests/compile-fail/environ-gets-deallocated.stderr
error: Undefined Behavior: pointer to alloc3 was dereferenced after this allocation got freed
  --> $DIR/environ-gets-deallocated.rs:23:23
   |
LL |     let _y = unsafe { *pointer }; //~ ERROR dereferenced after this allocation got freed
   |                       ^^^^^^^^ pointer to alloc3 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/environ-gets-deallocated.rs:23:23

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

